--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -6,15 +6,15 @@
   <div class="row justify-content-start px-4 ">
     <div class="col-sm-3  h-75" *ngFor="let item of products">
        <ng-container >
-        <div class="card m-2 p-3 mb-5 bg-white rounded">
+        <div class="card mb-5 bg-white rounded">
           <img [src]="item.image" (click)="showSingleProduct(item.id)" class="zoom-img card-img-top p-3" width="150" height="200" alt="https://images.unsplash.com/flagged/photo-1587302164675-820fe61bbd55?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80">
           <div class="card-body">
-            <h5 class="card-title">{{item.title}}</h5>
+            <h5 class="card-title text-truncate">{{item.title}}</h5>
             <p class="card-text text-truncate">{{item.description}}</p>
-            <strong class="card-text mb-3">${{item.price}}</strong>
-            <div class="btn  d-flex align-items-center justify-content-evenly">
+            <strong class="card-text">${{item.price}}</strong>
+            <div class="card-btn mt-3 d-block w-100">
               <a href="javascript:void(0);" class="btn btn-sm btn-warning">Add to Cart</a>
-              <a href="javascript:void(0);" class="btn btn-sm btn-danger mx-1">Buy Now</a>
+              <a href="javascript:void(0);" class="btn btn-sm btn-danger mx-3">Buy Now</a>
             </div>
           </div>
         </div>
