--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,12 +13,10 @@
             <!-- Grid column -->
             <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">
-                Company name
+                Carto<span class="text-warning">Pia</span>
               </h6>
               <p>
-                Here you can use rows and columns to organize your footer
-                content. Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit.
+                Full Responsive E-commerce website using Angular
               </p>
             </div>
             <!-- Grid column -->
@@ -29,16 +27,16 @@
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
               <p>
-                <a class="text-light">MDBootstrap</a>
+                <a class="text-light">Electronics</a>
               </p>
               <p>
-                <a class="text-light">MDWordPress</a>
+                <a class="text-light">Jwellery</a>
               </p>
               <p>
-                <a class="text-light">BrandFlow</a>
+                <a class="text-light">Clothes</a>
               </p>
               <p>
-                <a class="text-light">Bootstrap Angular</a>
+                <a class="text-light">Shoes</a>
               </p>
             </div>
             <!-- Grid column -->
@@ -51,10 +49,9 @@
             <!-- Grid column -->
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-              <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-              <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-              <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-              <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+              <p><i class="fas fa-home mr-3"></i> L-3rd/2 Pragati Puram Colony</p>
+              <p><i class="fas fa-envelope mr-3"></i> ayushsrivastava1011@gmail.com</p>
+              <p><i class="fas fa-phone mr-3"></i> +91 7897909***</p>
             </div>
             <!-- Grid column -->
   
@@ -127,9 +124,9 @@
            class="text-center p-3"
            style="background-color: rgba(0, 0, 0, 0.2)"
            >
-        © 2020 Copyright:
-        <a class="text-light" href="https://mdbootstrap.com/"
-           >MDBootstrap.com</a
+        © 2023 Copyright
+        <a class="text-light" href="https://github.com/Ayush-Srivastava-Tricon"
+           >Ayush Srivastava</a
           >
       </div>
       <!-- Copyright -->
