--- a/src/app/single-product/single-product.component.html
+++ b/src/app/single-product/single-product.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row justify-content-around">
+    <div class="row justify-content-around p-3">
         <div class="col-sm-4">
             <div class="img zoom-img  text-center shadow p-3 mb-5 bg-white rounded">
                 <img [src]="product.image" class="p-3" alt="" width="350" height="500">
