--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -36,6 +36,14 @@ nav{
     margin: 0px 10px;
     flex-wrap: wrap;
 }
+.nav-item-links a{
+        text-decoration: none;
+        color: white;
+        opacity: 0.8;
+}
+.nav-item-links a:hover{
+    opacity: 1;
+}
 
 @media (max-width:768px) {
         .input-group{
