--- a/src/styles.css
+++ b/src/styles.css
@@ -12,15 +12,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 transform: scale(1.1);
 }
 
-.card{
+.card-product{
     align-items: center;
     text-align: center;
-    width: 18rem;
+    margin: 0px 20px;
     box-shadow: 1px 2px 6px 0px black;
     height: 440px;
 }
-.card-body{
-    width: 320px;
+.card-body-product{
+    /* width: 320px; */
     padding: 35px;
 }
 
@@ -29,8 +29,33 @@ transform: scale(1.1);
     height: 200px;
 }
 
-.card-btn{
-    position: absolute;
-    left: 0px;
-    bottom: 10px;
+.delete-img{
+    transition: 0.2s all ease;
+}
+
+.delete-img:hover{
+    transform: scale(1.3);
+}
+
+.minus-item{
+    transition: 0.1s all ease;   
+}
+
+.minus-item:hover{
+    transform: scale(1.2);
+}
+
+.plus-item{
+    transition: 0.1s all ease;   
+}
+
+.plus-item:hover{
+    transform: scale(1.2);
+}
+
+@media (max-width:768px) {
+        .zoom-img img{
+            width: 180px;
+            height: 200px;
+        }
 }
