--- a/src/styles.css
+++ b/src/styles.css
@@ -58,4 +58,8 @@ transform: scale(1.1);
             width: 180px;
             height: 200px;
         }
+        .img-fluid{
+            width: 180px;
+            height: 200px;
+        }
 }
