--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -17,6 +17,8 @@
             <a href="javascript:void(0);" class="btn btn-sm btn-warning" (click)="addToCart(item)">Add to Cart</a>
             <a href="javascript:void(0);" class="btn btn-sm btn-danger mx-3">Buy Now</a>
           </div>
+          <ul class="list unstyled">
+          </ul>
         </div>
       </ng-container>
     </div>
