--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid my-5 p-0">
+<div class="container-fluid p-0" style="margin-top: 89px;">
     <!-- Footer -->
     <footer
             class="text-center text-lg-start text-light"
