--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,3 +1,9 @@
 .card-img-top{
     cursor: pointer;
 }
+
+.product-container{
+    background-color: whitesmoke;
+    padding-top: 50px;
+    padding-bottom: 50px ;
+}
