--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -15,7 +15,7 @@
           </div>
           <div class="card-btn-product mt-3 d-block w-100">
             <a href="javascript:void(0);" class="btn btn-sm btn-warning" (click)="addToCart(item)">Add to Cart</a>
-            <a href="javascript:void(0);" class="btn btn-sm btn-danger mx-3">Buy Now</a>
+            <!-- <a href="javascript:void(0);" class="btn btn-sm btn-danger mx-3">Buy Now</a> -->
           </div>
           <ul class="list unstyled">
           </ul>
