--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -43,7 +43,8 @@
                         </div>
                         <div class="form-group mb-3 col-sm-8">
                             <label for="">Category Image</label>
-                            <input type="file" accept="image/*" (change)="selectImg($event)">
+                            <input type="file" accept="image/*" (change)="selectProdImg($event)">
+                            <!-- <input type="file" accept="image/*" (change)="selectImg($event)"> -->
                         </div>
                         <div class="submit-btn my-3">
                             <button class="btn btn-sm btn-primary" (click)="uploadImage()">Add Product</button>
